Fixed recent popup list being case sensitive.